name:                lhc
version:             0.11
synopsis:            The Luxurious LHC Optimization System
description:
  LHC rewrite number 4.
category:            Compiler
license:             PublicDomain
author:              David Himmelstrup, Austin Seipp
maintainer:          https://github.com/Lemmih/lhc/issues
homepage:            https://github.com/Lemmih/lhc
build-type:          Custom
cabal-version:	     >= 1.10
extra-source-files:
data-files:

Source-repository head
  type:          git
  location:      https://github.com/Lemmih/lhc.git

Executable lhc
 main-is:            Main.hs
 Hs-Source-Dirs:     src
 ghc-prof-options:   -auto-all
 build-depends:      base == 4.*,
                     containers,
                     filepath         >= 1.3.0.0,
                     mtl              >= 2.1.2,
                     ansi-wl-pprint   >= 0.6.6,

                     hse-cpp          >= 0.1,
                     haskell-packages >= 0.6,
                     Cabal,
                     haskell-src-exts >= 1.16.0,
                     tagged,
                     optparse-applicative,
                     binary,
                     derive,
                     directory,

                     bedrock,
                     haskell-scope,
                     haskell-tc



 ghc-options:        -fwarn-unused-imports -fwarn-unused-binds
                     -fwarn-incomplete-patterns
 Default-language:   Haskell2010
 Extensions:
