name:                lhc
version:             0.11
synopsis:            The Luxurious LHC Optimization System
description:
  LHC rewrite number 4.
category:            Compiler
license:             PublicDomain
author:              David Himmelstrup, Austin Seipp
maintainer:          https://github.com/Lemmih/lhc/issues
homepage:            https://github.com/Lemmih/lhc
build-type:          Simple
cabal-version:	     >= 1.10
extra-source-files:
data-files:
  rts/*.h
  rts/*.c
  rts/gc/*.c

Source-repository head
  type:          git
  location:      https://github.com/Lemmih/lhc.git

Executable lhc
 main-is:            Main.hs
 other-modules:
   RTS
   Interpret
   Compiler.CoreToBedrock
   Paths_lhc
 Hs-Source-Dirs:     src
 ghc-prof-options:   -auto-all
 build-depends:      base == 4.*,
                     array,
                     containers,
                     filepath         >= 1.3.0.0,
                     mtl              >= 2.1.2,
                     ansi-wl-pprint   >= 0.6.6,
                     process,
                     hse-cpp          >= 0.1,
                     haskell-packages >= 0.6.2,
                     Cabal,
                     haskell-src-exts >= 1.16.0,
                     tagged,
                     optparse-applicative,
                     binary,
                     directory,
                     llvm-hs-pure,
                     serialise, primitive,
                     unix, libffi >= 0.2, vector,

                     bedrock,
                     haskell-crux,
                     haskell-scope,
                     haskell-tc



 ghc-options:        -fwarn-unused-imports -fwarn-unused-binds
                     -fwarn-incomplete-patterns -fwarn-missing-signatures
                     -fwarn-tabs
 Default-language:   Haskell2010
 Extensions:

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Properties
    UnitTests
  hs-source-dirs: test
  build-depends:
    base,
    directory,
    parsec,
    process,
    filepath,
    bedrock,
    haskell-tc,
    hspec,
    hspec-contrib,
    HUnit,
    QuickCheck >= 2.1.0,
    ansi-wl-pprint
  default-language: Haskell2010
  ghc-options: -Wall -Werror
